--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 </head>
 
 <!-- Botón flotante de WhatsApp -->
-<a href="https://wa.me/5493644563925" class="whatsapp-float animated" target="_blank">
+<a href="https://wa.me/5493644330777" class="whatsapp-float animated" target="_blank">
     <img src="{% static 'img/what.png' %}" alt="WhatsApp">
 </a>
 
@@ -246,10 +246,10 @@
                             Listados
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="colaboradorDropdown">
-                            <li><a class="dropdown-item" href="{% url 'CarritoApp:listar_facturas' %}">Cierre de Caja</a></li>
-                            <li><a class="dropdown-item" href="{% url 'CarritoApp:modificacion_stock' %}">Stock en Deposito</a></li>
-                            <li><a class="dropdown-item" href="{% url 'CarritoApp:movimiento_cliente' %}">Listado de Facturas</a></li>
-                            <li><a class="dropdown-item" href="{% url 'CarritoApp:lista_cuenta_corriente' %}">Listado Cuenta Cte</a></li>
+                            <li><a class="dropdown-item" href="{% url 'CarritoApp:listar_facturas' %}">Control de Caja Diario</a></li>
+                            <li><a class="dropdown-item" href="{% url 'CarritoApp:modificacion_stock' %}">Stock en Depósito.</a></li>
+                            <li><a class="dropdown-item" href="{% url 'CarritoApp:movimiento_cliente' %}">Listados de Facturas</a></li>
+                            <li><a class="dropdown-item" href="{% url 'CarritoApp:lista_cuenta_corriente' %}">Listados Cuenta Cte</a></li>
                             <li><a class="dropdown-item" href="{% url 'CarritoApp:productos_vendidos' %}">Productos Vendidos</a></li>
                         </ul>
                     </li>
