--- a/apps/CarritoApp/templates/detalle_factura.html
+++ b/apps/CarritoApp/templates/detalle_factura.html
@@ -74,15 +74,9 @@
         </div>  
 
         <div class="d-flex justify-content-center gap-3 mt-4">
-            <!-- Ver PDF -->
-            <a href="{{ pdf_url }}" target="_blank" class="btn btn-outline-primary">
-                <i class="bi bi-file-earmark-pdf"></i> Ver PDF
-            </a>
-
             <!-- Descargar PDF -->
             <a href="{{ pdf_url }}" download="factura_{{ factura.id }}.pdf" class="btn btn-dark">
-                <i class="bi bi-download"></i> Descargar PDF
-            </a>
+                <i class="bi bi-download"></i> Descargar Factura</a>
         </div>
         
         <hr class="mt-5">
