--- a/templates/users/iniciar_sesion.html
+++ b/templates/users/iniciar_sesion.html
@@ -62,7 +62,7 @@
 
                         <!-- Campos del formulario -->
                         <div class="col-lg-12 mb-3">
-                            <label for="fakeuser">Nombre de usuario:</label>
+                            <label for="fakeuser">DNI Usuario:</label>
                             {{ form.username }}
                         </div>
                         
@@ -101,7 +101,7 @@
 
                         <!-- Crear cuenta -->
                         <div class="col-lg-12 mt-3 text-center">
-                            <p style="font-size: 0.9rem; color: #555;">¿Aún no tienes cuenta? <a href="{% url 'apps.blog_auth:registrarse' %}" style="color: #007bff; text-decoration: none;">Crea una ahora</a></p>
+                            <p style="font-size: 0.9rem; color: #555;">¿Aún no tienes cuenta? <a href="{% url 'apps.blog_auth:registrarse' %}" style="color: #007bff; text-decoration: none;">REGISTRASE</a></p>
                         </div>
                     </div>
                 </div>
