--- a/templates/base.html
+++ b/templates/base.html
@@ -171,7 +171,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                                            
+                        {% if request.user.is_authenticated and request.user.username != "invitado_whatsapp" %}    
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="colaboradorDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false" style="font-family: 'Verdana', sans-serif; color: #e29494;">
@@ -190,7 +190,7 @@
 
                             </ul>
                         </li>
-                        
+                        {% endif %}
                     </li>
 
                     <li class="nav-item">
@@ -292,7 +292,9 @@
     </a>
 
     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+      {% if request.user.is_authenticated and request.user.username != "invitado_whatsapp" %}  
       <li><a class="dropdown-item" href="{% url 'apps.blog_auth:editar_usuario' user.pk %}">Modificar Perfil</a></li>
+      {% endif %}
       {% if user.is_staff %}
       <li><a class="dropdown-item" href="{% url 'blog_auth:lista_usuarios' %}">Listado de Usuarios</a></li>
       {% endif %}
